--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/forms": "^0.5.7",
     "next": "14.2.4",
+    "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
     "validator": "^13.12.0",
