--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@prisma/client": "^5.16.1",
     "@tailwindcss/forms": "^0.5.7",
     "next": "14.2.4",
     "prisma": "^5.16.1",
