--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.16.1",
     "@tailwindcss/forms": "^0.5.7",
+    "bcrypt": "^5.1.1",
     "next": "14.2.4",
     "prisma": "^5.16.1",
     "react": "^18",
@@ -20,6 +21,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
