--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "server-only": "^0.0.1",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
